Fixed lists alignment error

--- a/static/css/components/list-entry.less
+++ b/static/css/components/list-entry.less
@@ -5,6 +5,7 @@
 .listEntry {
   width: 280px;
   margin: 0 30px 35px 0;
+  break-inside: avoid;
   float: left;
   .cover {
     width: 35px;
