--- a/static/css/page-user.less
+++ b/static/css/page-user.less
@@ -104,6 +104,13 @@ div#subjectsPage{
   }
 }
 
+div#lists{
+  columns: 2;
+  @media only screen and (min-width: @width-breakpoint-tablet) {
+    columns: 3;
+  }
+}
+
 #authors{
   div{
     display: flex;
